--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viet Restaurant</title>
+    <title>Việt Restaurant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -37,8 +37,40 @@
             </div>
         </div>
     </navbar>
-    <video controls src="src/pexels-rodnae-productions-6645816.mp4" poster="" width="350">
-    </video>
+    <div class="container-fluid">
+        <header>
+            <div class="row d-flex justify-content-center">
+                <div class="col-6">
+                    <video controls src="src/pexels-rodnae-productions-6645816.mp4" poster="" width="350">
+                    </video>
+                </div>
+                <div class="col-4">
+                    <h1>Việt Restaurant</h1>
+                </div>
+            </div>
+        </header>
+        <section class="type-food">
+            <h2 class="d-flex justify-content-center">Vietnamese Cuisine</h2>
+            <div class="row">
+                <div class="col-4 m-4">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/808/original/appetizerrolls.jpg?1681355438"
+                        class="img-fluid rounded mb-3" id="vietnamese plate" />
+                </div>
+                <div class="col-6">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+
+                </div>
+                <div class="col-4">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/807/original/pho.jpg?1681355417"
+                        class="img-fluid rounded mb-3" id="vietnamese plate" />
+                </div>
+            </div>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
