added styling to contact section and new images

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="container-fluid">
         <header>
             <div class="row d-flex justify-content-center">
-                <div class="col-6">
-                    <video controls src="src/pexels-rodnae-productions-6645816.mp4" poster="" width="350">
-                    </video>
+                <div class="col-6 my-0 p-0">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/884/original/vietnameserestuarant.jpg?1681418140"
+                        class="img-fluid vietnameserestaurant" />
                 </div>
                 <div class="col-4">
                     <h1>Việt Restaurant</h1>
@@ -50,23 +50,48 @@
             </div>
         </header>
         <section class="type-food">
-            <h2 class="d-flex justify-content-center">Vietnamese Cuisine</h2>
+            <h2 class="d-flex justify-content-center">Authentic Vietnamese Cuisine</h2>
             <div class="row">
-                <div class="col-4 m-4">
-                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/808/original/appetizerrolls.jpg?1681355438"
-                        class="img-fluid rounded mb-3" id="vietnamese plate" />
+                <div class="col-4">
+                    <video controls src="src/pexels-rodnae-productions-6645816.mp4" poster="" width="350">
+                    </video>
                 </div>
                 <div class="col-6">
+                    <p>
+                        Authentic Vietnamese Food located in Zaraplex in Eastside El Paso Texas.
+                        Opened since 2017 and was named Best New Restaurant by Yelp in 2017.
 
+                    </p>
                 </div>
             </div>
+        </section>
+        <section class="contact-us">
             <div class="row">
-                <div class="col-6">
-
+                <div class="col-6 m-0 p-0">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/808/original/appetizerrolls.jpg?1681355438"
+                        class="img-fluid" id="vietnamese food" />
                 </div>
-                <div class="col-4">
-                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/807/original/pho.jpg?1681355417"
-                        class="img-fluid rounded mb-3" id="vietnamese plate" />
+                <div class="col-6 text-white bg-dark">
+                    <h3>Việt Restaurant</h3>
+                    <h4>Address: 1700 N Zaragoza Rd #107,108, El Paso, TX 79936
+                        <br><br>
+                        Hours:
+                        Sunday 11 AM-9 PM
+                        <br>
+                        Monday Closed
+                        <br>
+                        Tuesday 11 AM-9 PM
+                        <br>
+                        Wednesday 11 AM-9 PM
+                        <br>
+                        Thursday 11 AM-9 PM
+                        <br>
+                        Friday 11 AM-9 PM
+                        <br>
+                        Saturday 11 AM-9 PM
+                        <br><br>
+                        Phone: (915) 855-8888
+                    </h4>
                 </div>
             </div>
         </section>
