--- a/index.html
+++ b/index.html
@@ -8,14 +8,31 @@
     <title>Việt Restaurant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 </head>
+<style>
+    h1 {
+        font-family: 'Montserrat', sans-serif;
+        color: black;
+    }
+
+    .navbar {
+        background-color: rgb(236, 228, 228);
+    }
+
+    .story-ingredient-section {
+        background-color: rgb(236, 228, 228);
+    }
+</style>
 
 <body>
     <navbar class="navbar navbar-expand-lg bg-body-teritary">
         <div class="container-fluid justify-content-center">
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav text-white">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -37,19 +54,13 @@
             </div>
         </div>
     </navbar>
-    <div class="container-fluid">
-        <header>
-            <div class="row d-flex justify-content-center">
-                <div class="col-6 my-0 p-0">
-                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/884/original/vietnameserestuarant.jpg?1681418140"
-                        class="img-fluid vietnameserestaurant" />
-                </div>
-                <div class="col-4">
-                    <h1>Việt Restaurant</h1>
-                </div>
-            </div>
+    <div class="container-fluid m-0 p-0">
+        <header class="m-0 p-0">
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/888/original/vietnamese4.jpg?1681418187"
+                class="vietnamesefrontbackground" width="1350" />
+            <h1>Việt Restaurant</h1>
         </header>
-        <section class="type-food">
+        <section class="story-ingredient-section">
             <h2 class="d-flex justify-content-center">Authentic Vietnamese Cuisine</h2>
             <div class="row">
                 <div class="col-4">
@@ -64,6 +75,15 @@
                     </p>
                 </div>
             </div>
+        </section>
+        <section class="decorative-img-section">
+            <img src=https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/957/original/vietnameserestuarant.jpg?1681442276""
+                class="img-fluid vietnameserestaurant" width="1350" />
+        </section>
+        <section class="reviews-section m-0 p-0">
+            <h2 class="d-flex justify-content-center p-3">Reviews</h2>
+
+
         </section>
         <section class="contact-us">
             <div class="row">
@@ -95,6 +115,13 @@
                 </div>
             </div>
         </section>
+        <footer class="text-white bg-dark p-4">
+            This website created and coded by Amanda Ventura.(not original website)
+            <br>
+            Created for SheCodes Challenge Favorite Restaurant Landing Page 2023.
+            <br>
+            All Rights Reserved. Amanda Ventura 2023.
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
