--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         color: black;
     }
 
+    .navbar-brand {
+        font-size: 2rem;
+    }
+
     .navbar {
         background-color: rgb(236, 228, 228);
     }
@@ -30,16 +34,16 @@
 
 <body>
     <navbar class="navbar navbar-expand-lg bg-body-teritary">
-        <div class="container-fluid justify-content-center">
+        <div class="container-fluid justify-content-evenly text-center">
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav text-white">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Menu</a>
                     </li>
-                    <a class="navbar-brand" href="#">Viet</a>
+                    <a class="navbar-brand" href="#">Việt</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -56,9 +60,10 @@
     </navbar>
     <div class="container-fluid m-0 p-0">
         <header class="m-0 p-0">
-            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/888/original/vietnamese4.jpg?1681418187"
+            <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/975/original/vietnamese4.jpg?1681447499"
                 class="vietnamesefrontbackground" width="1350" />
-            <h1>Việt Restaurant</h1>
+            <h1 class="position-absolute top-50 start-50 translate-middle shadow-lg p-3 mb-5 rounded">
+                Việt Restaurant</h1>
         </header>
         <section class="story-ingredient-section">
             <h2 class="d-flex justify-content-center">Authentic Vietnamese Cuisine</h2>
@@ -82,8 +87,58 @@
         </section>
         <section class="reviews-section m-0 p-0">
             <h2 class="d-flex justify-content-center p-3">Reviews</h2>
-
-
+            <div class="row m-4">
+                <div class="card" style="width: 16rem;">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/892/original/vietnamese8.jpg?1681418226"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Best Pho in El Paso!
+                        </p>
+                    </div>
+                </div>
+                <div class="card" style="width: 16rem;">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/891/original/vietnamese7.jpg?1681418218"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            So delicious! Egg rolls weren't frozen, and the pho was great! I loved the service we
+                            received!
+                        </p>
+                    </div>
+                </div>
+                <div class="card" style="width: 16rem;">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/890/original/vietnamese6.jpg?1681418208"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            La comida y el atendimento es excelente 👍
+                        </p>
+                    </div>
+                </div>
+                <div class="card" style="width: 16rem;">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/886/original/vietnamese2.jpg?1681418164"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Fresh ingredients, good portions, friendly service. Coffee is surprisingly good, plenty of
+                            choices even if u r looking
+                            for a vegetarian meal. Love that they listed it well on the menu like what ingredients are
+                            inside the egg rolls/ spring
+                            rolls/ rice / noodles.... Recommended
+                        </p>
+                    </div>
+                </div>
+                <div class="card" style="width: 16rem;">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/885/original/vietnamese1.jpg?1681418151"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            Yummy
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="contact-us">
             <div class="row">
