added story and mission

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     h1 {
         font-family: 'Montserrat', sans-serif;
         color: black;
+        text-shadow: 2px 2px 2px white;
     }
 
     .navbar-brand {
@@ -65,19 +66,39 @@
             <h1 class="position-absolute top-50 start-50 translate-middle shadow-lg p-3 mb-5 rounded">
                 Việt Restaurant</h1>
         </header>
-        <section class="story-ingredient-section">
-            <h2 class="d-flex justify-content-center">Authentic Vietnamese Cuisine</h2>
+        <section class="story-ingredient-section mb-5">
+            <h2 class="d-flex justify-content-center mb-4">Authentic Vietnamese Cuisine</h2>
             <div class="row">
                 <div class="col-4">
-                    <video controls src="src/pexels-rodnae-productions-6645816.mp4" poster="" width="350">
-                    </video>
+                    <img src="" class="vietnameseingredient" />
                 </div>
-                <div class="col-6">
+                <div class="col-4">
+                    <img src="" class="vietnameseingredient" />
+                </div>
+                <div class="col-4">
+                    <img src="" class="vietnameseingredient" />
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-3">
+                    <img src="" class="vietnameseingredient" />
+                </div>
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/978/original/vietrest.jpg?1681452253"
+                        class="vietrestimg" />
+                </div>
+                <div class="col-3 text-white bg-dark">
+                    <h3>Story</h3>
                     <p>
                         Authentic Vietnamese Food located in Zaraplex in Eastside El Paso Texas.
                         Opened since 2017 and was named Best New Restaurant by Yelp in 2017.
 
                     </p>
+                    <h4> Mission</h4>
+                    <p>Served Authentic Vietnamese food to the people of El Paso</p>
+                </div>
+                <div class="col-3">
+                    <img src="" class="vietnameseingredient" />
                 </div>
             </div>
         </section>
@@ -147,8 +168,8 @@
                         class="img-fluid" id="vietnamese food" />
                 </div>
                 <div class="col-6 text-white bg-dark">
-                    <h3>Việt Restaurant</h3>
-                    <h4>Address: 1700 N Zaragoza Rd #107,108, El Paso, TX 79936
+                    <h4>Việt Restaurant</h4>
+                    <h5>Address: 1700 N Zaragoza Rd #107,108, El Paso, TX 79936
                         <br><br>
                         Hours:
                         Sunday 11 AM-9 PM
@@ -166,7 +187,7 @@
                         Saturday 11 AM-9 PM
                         <br><br>
                         Phone: (915) 855-8888
-                    </h4>
+                    </h5>
                 </div>
             </div>
         </section>
