added ingredient images to story-ingredient section

--- a/index.html
+++ b/index.html
@@ -66,22 +66,30 @@
             <h1 class="position-absolute top-50 start-50 translate-middle shadow-lg p-3 mb-5 rounded">
                 Việt Restaurant</h1>
         </header>
-        <section class="story-ingredient-section mb-5">
-            <h2 class="d-flex justify-content-center mb-4">Authentic Vietnamese Cuisine</h2>
+        <section class="story-ingredient-section pb-5">
+            <h2 class="d-flex justify-content-center pt-4 mb-4">Authentic Vietnamese Cuisine</h2>
             <div class="row">
-                <div class="col-4">
-                    <img src="" class="vietnameseingredient" />
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/973/original/ricenoodles.jpg?1681447194"
+                        class="img-fluid vietnameseingredient" />
                 </div>
-                <div class="col-4">
-                    <img src="" class="vietnameseingredient" />
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/972/original/lemonmint.jpg?1681447179"
+                        class="img-fluid vietnameseingredient" />
                 </div>
-                <div class="col-4">
-                    <img src="" class="vietnameseingredient" />
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/971/original/lemongrass.jpg?1681447170"
+                        class="img-fluid vietnameseingredient" />
+                </div>
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/967/original/cinnamon.jpg?1681447119"
+                        class="img-fluid vietnameseingredient" />
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-3">
-                    <img src="" class="vietnameseingredient" />
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/970/original/ginger.jpg?1681447155"
+                        class="img-fluid vietnameseingredient" />
                 </div>
                 <div class="col-3">
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/978/original/vietrest.jpg?1681452253"
@@ -95,10 +103,29 @@
 
                     </p>
                     <h4> Mission</h4>
-                    <p>Served Authentic Vietnamese food to the people of El Paso</p>
+                    <p>Served Delicious Authentic Vietnamese food to the people of El Paso</p>
                 </div>
                 <div class="col-3">
-                    <img src="" class="vietnameseingredient" />
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/969/original/coriander.jpg?1681447144"
+                        class="img-fluid vietnameseingredient" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/966/original/beansprouts.jpg?1681447082"
+                        class="img-fluid vietnameseingredient" />
+                </div>
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/965/original/carrots.jpg?1681447068"
+                        class="img-fluid vietnameseingredient" />
+                </div>
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/964/original/cilantro.jpg?1681447052"
+                        class="img-fluid vietnameseingredient" />
+                </div>
+                <div class="col-3">
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/963/original/basil.jpg?1681447042"
+                        class="img-fluid vietnameseingredient" />
                 </div>
             </div>
         </section>
