made a few changes to navbar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu</a>
+                        <a class="nav-link" href="#">Story</a>
                     </li>
                     <a class="navbar-brand" href="#">Việt</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -50,7 +50,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Reviews</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Contact Us</a>
@@ -223,6 +223,7 @@
             <br>
             Created for SheCodes Challenge Favorite Restaurant Landing Page 2023.
             <br>
+            Unsplash.com images from
             All Rights Reserved. Amanda Ventura 2023.
         </footer>
     </div>
