added credit for images and a few styling to contact us section

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                         class="img-fluid" id="vietnamese food" />
                 </div>
                 <div class="col-6 text-white bg-dark">
-                    <h4>Việt Restaurant</h4>
-                    <h5>Address: 1700 N Zaragoza Rd #107,108, El Paso, TX 79936
+                    <h4 class="p-3">Việt Restaurant</h4>
+                    <h5 class="p-3">Address: 1700 N Zaragoza Rd #107,108, El Paso, TX 79936
                         <br><br>
                         Hours:
                         Sunday 11 AM-9 PM
@@ -223,7 +223,12 @@
             <br>
             Created for SheCodes Challenge Favorite Restaurant Landing Page 2023.
             <br>
-            Unsplash.com images from
+            Unsplash.com images from Mockup Graphics, Angelo Pantazis, volant,
+            <br>
+            Mae Mu, Mockupo, Faris Mohammed, Jacqueline Brandwayn, Lena Kulybaba,
+            <br>
+            Maja Vujic, and Marko Blažević.
+            <br>
             All Rights Reserved. Amanda Ventura 2023.
         </footer>
     </div>
