--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
 <style>
     h1 {
         font-family: 'Montserrat', sans-serif;
-        color: black;
-        text-shadow: 2px 2px 2px white;
+        color: white;
+        text-shadow: 2px 2px 2px black;
+        font-size: 5rem;
+    }
+
+    header a {
+        border-radius: 10px;
+        border: solid white;
+        font-size: 20px;
+        top: 70%;
+        text-decoration: none;
+        color: white;
+        text-shadow: 2px 2px 2px black;
     }
 
     .navbar-brand {
@@ -65,6 +76,8 @@
                 class="vietnamesefrontbackground" width="1350" />
             <h1 class="position-absolute top-50 start-50 translate-middle shadow-lg p-3 mb-5 rounded">
                 Việt Restaurant</h1>
+            <a href="#" id="order button" class="p-2 mb-5 position-absolute start-50 translate-middle">order
+                now</a>
         </header>
         <section class="story-ingredient-section pb-5">
             <h2 class="d-flex justify-content-center pt-4 mb-4">Authentic Vietnamese Cuisine</h2>
