--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Menu</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Reviews</a>
                     </li>
                     <li class="nav-item">
