--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 </head>
 <style>
@@ -21,7 +27,36 @@
         font-size: 5rem;
     }
 
+    h2 {
+        font-family: 'Chivo Mono', monospace;
+    }
+
+    h3 {
+        font-family: 'Poppins', sans-serif;
+    }
+
+    h4 {
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    h5 {
+        font-family: 'Chivo Mono', monospace;
+    }
+
+    p {
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    footer {
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    .navbar a {
+        font-family: 'Chivo Mono', monospace;
+    }
+
     header a {
+        font-family: 'Poppins', sans-serif;
         border-radius: 10px;
         border: solid white;
         font-size: 20px;
@@ -79,7 +114,7 @@
                 class="vietnamesefrontbackground" width="1350" />
             <h1 class="position-absolute top-50 start-50 translate-middle shadow-lg p-3 mb-5 rounded">
                 Việt Restaurant</h1>
-            <a href="#" id="order button" class="p-2 mb-5 position-absolute start-50 translate-middle">order
+            <a href="#" id="order button" class="p-3 mb-5 position-absolute start-50 translate-middle">order
                 now</a>
         </header>
         <section class="story-ingredient-section pb-5">
@@ -111,15 +146,15 @@
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/978/original/vietrest.jpg?1681452253"
                         class="vietrestimg" />
                 </div>
-                <div class="col-3 text-white bg-dark">
+                <div class="col-3 text-white bg-dark p-3">
                     <h3>Story</h3>
                     <p>
                         Authentic Vietnamese Food located in Zaraplex in Eastside El Paso Texas.
                         Opened since 2017 and was named Best New Restaurant by Yelp in 2017.
 
                     </p>
-                    <h4> Mission</h4>
-                    <p>Served Delicious Authentic Vietnamese food to the people of El Paso</p>
+                    <h3> Mission</h3>
+                    <p>Served Delicious Authentic Vietnamese food to the people of El Paso.</p>
                 </div>
                 <div class="col-3">
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/969/original/coriander.jpg?1681447144"
