--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
         font-family: 'Montserrat', sans-serif;
     }
 
-    .navbar a {
-        font-family: 'Chivo Mono', monospace;
-    }
-
     header a {
         font-family: 'Poppins', sans-serif;
         border-radius: 10px;
@@ -66,12 +62,40 @@
         text-shadow: 2px 2px 2px black;
     }
 
-    .navbar-brand {
-        font-size: 2rem;
+    header a:hover {
+        font-family: 'Poppins', sans-serif;
+        background-color: black;
+        border-radius: 10px;
+        border: solid black;
+        font-size: 20px;
+        top: 70%;
+        text-decoration: none;
+        color: white;
+        text-shadow: 2px 2px 2px black;
     }
 
-    .navbar {
+    nav {
         background-color: rgb(236, 228, 228);
+    }
+
+    .nav {
+        background-color: rgb(236, 228, 228);
+        font-family: 'Chivo Mono', monospace;
+    }
+
+    .nav a {
+        color: black;
+    }
+
+    .nav a:hover {
+        color: black;
+        text-decoration: overline;
+    }
+
+    .navbar-brand {
+        background-color: rgb(236, 228, 228);
+        font-size: 2rem;
+        color: black;
     }
 
     .story-ingredient-section {
@@ -80,34 +104,31 @@
 </style>
 
 <body>
-    <navbar class="navbar navbar-expand-lg bg-body-teritary">
-        <div class="container-fluid justify-content-evenly text-center">
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Story</a>
-                    </li>
-                    <a class="navbar-brand" href="#">Việt</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Menu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Reviews</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </navbar>
+    <nav>
+        <a class="navbar-brand nav justify-content-center" href="#">Việt</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="nav nav-underline justify-content-center pb-4">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Story</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Reviews</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Contact Us</a>
+            </li>
+        </ul>
+    </nav>
     <div class="container-fluid m-0 p-0">
         <header class="m-0 p-0">
             <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/975/original/vietnamese4.jpg?1681447499"
