added hover effects for images for story section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
     .story-ingredient-section {
         background-color: rgb(236, 228, 228);
     }
+
+    .vietnameseingredient:hover {
+        filter: grayscale(70%);
+        cursor: pointer;
+        transform: scale(1.2);
+    }
 </style>
 
 <body>
@@ -168,7 +174,7 @@
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/978/original/vietrest.jpg?1681452253"
                         class="vietrestimg" />
                 </div>
-                <div class="col-3 text-white bg-dark p-3">
+                <div class="col-3 text-white bg-dark p-2">
                     <h3>Story</h3>
                     <p>
                         Authentic Vietnamese Food located in Zaraplex in Eastside El Paso Texas.
