added ids for sections

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 id="order button" class="p-3 mb-5 position-absolute start-50 translate-middle">order
                 now</a>
         </header>
-        <section class="story-ingredient-section pb-5">
+        <section class="story-ingredient-section pb-5" id="story-ingredient-section">
             <h2 class="d-flex justify-content-center pt-4 mb-4">Authentic Vietnamese Cuisine</h2>
             <div class="row">
                 <div class="col-3">
@@ -208,7 +208,7 @@
                 </div>
             </div>
         </section>
-        <section class="decorative-img-section">
+        <section class="decorative-img-section" id="decorative-img-section">
             <img src=https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/957/original/vietnameserestuarant.jpg?1681442276""
                 class="img-fluid vietnameserestaurant" width="1350" />
         </section>
@@ -267,7 +267,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact-us">
+        <section class="contact-us" id="contact-us">
             <div class="row">
                 <div class="col-6 m-0 p-0">
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/808/original/appetizerrolls.jpg?1681355438"
