--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                     </p>
                     <h3> Mission</h3>
-                    <p>Served Delicious Authentic Vietnamese food to the people of El Paso.</p>
+                    <p>Serve Delicious Authentic Vietnamese food to the people of El Paso.</p>
                 </div>
                 <div class="col-3">
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/076/969/original/coriander.jpg?1681447144"
