added to photos credit

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <br>
             Mae Mu, Mockupo, Faris Mohammed, Jacqueline Brandwayn, Lena Kulybaba,
             <br>
-            Maja Vujic, and Marko Blažević.
+            Maja Vujic, Marko Blažević, and freepik.
             <br>
             All Rights Reserved. Amanda Ventura 2023.
         </footer>
