added google map and styling

--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
         background-color: var(--secondary-color);
     }
 
+    .embed {
+        max-width: 1000px;
+        display: block;
+        margin: 0 auto;
+        aspect-ratio: 16 / 9;
+        width: 100%;
+    }
+
     .nav {
         background-color: var(--secondary-color);
         font-family: var(--secondary-font-family);
@@ -275,6 +283,13 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="location-section">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13570.597932579924!2d-106.2765254!3d31.7527672!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e744753e7c547b%3A0x39341cbec615e850!2sVi%E1%BB%87t%20Restaurant!5e0!3m2!1sen!2sus!4v1699843251493!5m2!1sen!2sus"
+                class="embed" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </section>
         <section class="contact-us" id="contact-us">
             <div class="row">
